--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 			li{
 				list-style: none;
 			}
+			img{
+				-webkit-user-select: none;
+				   -moz-user-select: none;
+				    -ms-user-select: none;
+				        user-select: none;
+			}
 			.ddd{
 				width: 600px;
 				margin: 0 auto;
